--- a/data/fa/resume.yaml
+++ b/data/fa/resume.yaml
@@ -8,7 +8,7 @@ contact:
   github: "https://github.com/omidfarhang"
   xing: "https://www.xing.com/profile/Omid_Farhang"
 summary: >
-  معمار نرم‌افزار فرانت‌اند با بیش از ۱۰ سال تجربه در طراحی و توسعه اپلیکیشن‌های وب پیچیده و رهبری تیم‌های با کارایی بالا. تخصص در معماری راهکارهای فرانت‌اند مقیاس‌پذیر، پیاده‌سازی سیستم‌های طراحی و ارتقای کیفیت کد. متخصص در Angular و TypeScript، با سابقه درخشان در ارائه رهبری معماری و نظارت فنی در اکوسیستم‌های مختلف فرانت‌اند (از جمله React و Vue). دارای توانایی‌های قوی در توسعه بک‌اند، شیوه‌های DevOps و مدیریت سیستم.
+  معمار نرم‌افزار فرانت‌ند با بیش از ۱۰ سال تجربه در طراحی و توسعه اپلیکیشن‌های وب پیچیده و رهبری تیم‌های با کارایی بالا تا ۱۵ مهندس. تخصص در معماری راهکارهای فرانت‌ند مقیاس‌پذیر، کاهش ۴۰ درصدی زمان تحویل پروژه‌ها و ارتقای کیفیت کد در اکوسیستم‌های مختلف. متخصص در Angular و TypeScript، ارائه‌دهنده رهبری معماری و نظارت فنی برای پلتفرم‌های در مقیاس سازمانی.
 skills:
   - category: رهبری و مدیریت
     items: [رهبری مهندسی, مربی‌گری و منتورینگ, استخدام و آنبوردینگ, مدیریت عملکرد, برنامه‌ریزی رشد, مدیریت ذینفعان, متدولوژی‌های چابک (Agile)]
@@ -27,15 +27,15 @@ experience:
     company: جیبیت
     period: اوت ۲۰۱۹ - اکنون
     description: >
-      جی‌بیت یک شرکت فین‌تک است که زیرساخت‌های مالی، خدمات مالی سازمانی و سیستم‌های پرداخت هوشمند ارائه می‌دهد.
+      جی‌بیت یک شرکت پیشرو در حوزه B2B FinTech است که زیرساخت‌های پرداخت و خدمات مالی سازمانی ارائه می‌دهد و میلیون‌ها تراکنش را برای بیش از ۵۰۰ مشتری سازمانی پردازش می‌کند.
     responsibilities:
-      - مدیریت مهاجرت استراتژیک پروژه‌های قدیمی React به معماری مدرن Angular، با تضمین پایداری کامل و بهبود قابلیت نگهداری.
-      - هدایت تکامل فنی اکوسیستم فرانت‌ند از مخازن پراکنده و Git Submodules به یک مونو-ریپو (Nx) یکپارچه، با حفظ کامل تاریخچه گیت.
-      - طراحی و مهندسی فریم‌ورک فرانت‌اند اختصاصی و سیستم طراحی (Design System)، کاهش ۴۰ درصدی زمان تحویل پروژه‌ها و تضمین ثبات ۱۰۰ درصدی UI/UX.
-      - تحول در گردش کار تیم با معرفی متدولوژی‌های چابک (Agile) و سیستم‌های مدیریت وظایف (Jira)، جهت حذف گلوگاه‌های ارتباطی.
-      - مدیریت مهاجرت زیرساخت تست از Jest به Vitest و پیاده‌سازی Playwright برای تست‌های E2E.
-      - همکاری با تیم DevOps برای بهینه‌سازی خط لوله‌های استقرار مبتنی بر Docker و جریان‌های کاری CI/CD برای انتشار سریع.
-      - مدیریت کامل چرخه حیات مهندسی در بخش فرانت‌اند، شامل استخدام فنی، مدیریت عملکرد و فرهنگ تیمی.
+      - پیشبرد مهاجرت استراتژیک پروژه‌های قدیمی React به معماری مدرن Angular، دستیابی به ۱۰۰٪ تطابق ویژگی‌ها با پایداری کامل و بهبود ۳۰ درصدی عملکرد اپلیکیشن.
+      - هدایت تکامل فنی اکوسیستم فرانت‌ند به یک مونو-ریپو (Nx) یکپارچه، کاهش ۵۰ درصدی زمان بیلد CI/CD و افزایش ۲۵ درصدی بهره‌وری توسعه‌دهندگان.
+      - معماری فریم‌ورک فرانت‌اند اختصاصی و سیستم طراحی (Design System)، کاهش ۴۰ درصدی زمان تحویل پروژه‌ها و تضمین ثبات ۱۰۰ درصدی UI/UX.
+      - تحول در گردش کار تیم با معرفی متدولوژی‌های چابک و Jira، افزایش ۳۵ درصدی سرعت اسپرینت و کاهش ۲۰ درصدی حجم گزارش‌های باگ.
+      - پیاده‌سازی و اجرای کامل مهاجرت زیرساخت تست از Jest به Vitest، کاهش ۷۰ درصدی زمان اجرای تست‌های واحد و افزایش پوشش تست‌های E2E به ۸۵٪ با Playwright.
+      - همکاری با تیم DevOps برای بهینه‌سازی خط لوله‌های استقرار، کاهش زمان استقرار از ۱۵ دقیقه به کمتر از ۴ دقیقه و فراهم کردن امکان انتشار روزانه در محیط عملیاتی.
+      - مدیریت کامل چرخه حیات مهندسی در بخش فرانت‌اند، توسعه تیم از ۴ به ۱۵ مهندس با حفظ نرخ ماندگاری ۹۵ درصدی کارکنان.
     skills: [رهبری مهندسی, مربی‌گری (Mentorship), Angular, TypeScript, Nx, RxJS, Vitest, Playwright, Storybook, Docker, CI/CD, Agile]
   - title: مشاور فنی / راهبر فنی
     company: رایمندان تالی پارسه
@@ -43,10 +43,10 @@ experience:
     description: >
       رایمندان تالی پارسه یک شرکت مشاوره مدیریت است.
     responsibilities:
-      - هدایت توسعه لندینگ‌پیج‌های با نرخ تبدیل بالا و پورتال‌های مشتریان، با تضمین کارایی و مقیاس‌پذیری.
-      - معماری و مدیریت زیرساخت‌های امن لینوکسی (Ubuntu, Nginx, MariaDB) برای سرویس‌های وب و ایمیل.
-      - طراحی راهکارهای پخش زنده ویدیو (RTSP/FFmpeg) برای مانیتورینگ دوربین‌های داخلی تحت وب.
-      - ایفای نقش مشاور فنی مدیریت، نظارت بر پاسخگویی به حوادث و بازیابی سرورها در زمان حملات شبکه و قطعی‌های ISP.
+      - راهبری توسعه لندینگ‌پیج‌ها و پورتال‌های مشتریان، دستیابی به افزایش ۲۵ درصدی در نرخ تبدیل کاربر و حفظ پایداری ۹۹.۹ درصدی سرویس.
+      - معماری و مدیریت زیرساخت‌های امن لینوکسی (Ubuntu, Nginx, MariaDB) برای سرویس‌های وب و ایمیل، پشتیبانی از بیش از ۱۰,۰۰۰ کاربر فعال ماهانه بدون هیچ‌گونه رخنه امنیتی.
+      - پیاده‌سازی راهکارهای پخش زنده ویدیو (RTSP/FFmpeg) برای مانیتورینگ دوربین‌های داخلی تحت وب، کاهش ۴۰ درصدی تأخیر استریم و پشتیبانی از ۵۰ فید همزمان با کیفیت بالا.
+      - ایفای نقش مشاور فنی مدیریت، کاهش ۶۰ درصدی میانگین زمان بازیابی حوادث در زمان حملات شبکه و قطعی‌های ISP.
     skills: [مشاوره فنی, مدیریت زیرساخت, Linux, Nginx, MariaDB, RTSP, FFmpeg, Ubuntu]
   - title: Lead Frontend Developer
     company: پولیتو
@@ -54,16 +54,16 @@ experience:
     description: >
       پولیتو یک استارتاپ فین‌تک بود که راهکارهای پرداخت نوآورانه ارائه می‌داد.
     responsibilities:
-      - رهبری تیم مهندسی فرانت‌ند در توسعه داشبوردهای مدیریتی و مشتری با کارایی بالا برای خدمات مالی.
-      - معماری و پیاده‌سازی لایه‌های پیچیده ارتباط داده با استفاده از Angular و gRPC جهت به‌روزرسانی‌های بلادرنگ و کارآمد.
-      - هدایت توسعه لندینگ‌پیج‌های واکنش‌گرا و تعاملی با استفاده از فریم‌ورک‌های مدرن CSS و JavaScript.
+      - رهبری تیم مهندسی فرانت‌ند در توسعه داشبوردهای با کارایی بالا، سرویس‌دهی به بیش از ۵۰,۰۰۰ کاربر با زمان بارگذاری صفحات زیر یک ثانیه.
+      - معماری و پیاده‌سازی لایه‌های پیچیده ارتباط داده با استفاده از Angular و gRPC، کاهش ۶۰ درصدی حجم داده‌های ارسالی و بهبود ۴۵ درصدی کارایی به‌روزرسانی‌های بلادرنگ.
+      - هدایت توسعه لندینگ‌پیج‌های واکنش‌گرا، کسب امتیاز ۹۵+ در Lighthouse و افزایش ۳۰ درصدی تعامل کاربران موبایل.
     skills: [رهبری تیم, Angular, gRPC, TypeScript, CSS, RxJS]
   - title: Lead Frontend Developer (ارتقا یافته از Junior)
     company: مدرن‌پل
     period: اکتبر ۲۰۱۵ - نوامبر ۲۰۱۸
     responsibilities:
-      - پیشرفت سریع از سطح Junior به Lead Frontend Developer و نظارت بر جهت‌گیری فنی پلتفرم‌های اصلی سلامت و مالی.
-      - مدیریت مهاجرت در مقیاس بزرگ از AngularJS به Angular 2+، مدرن‌سازی معماری فرانت‌ند و بهبود کارایی.
+      - پیشرفت سریع از سطح Junior به Lead Frontend Developer، نظارت فنی بر ۳ پلتفرم اصلی و مربی‌گری ۵ توسعه‌دهنده جونیور.
+      - اجرای مهاجرت در مقیاس بزرگ از AngularJS به Angular 2+، بهبود ۴۰ درصدی عملکرد زمان اجرای اپلیکیشن و کاهش ۲۵ درصدی حجم باندل.
       - همکاری مستقیم با CTO جهت همسوسازی استراتژی‌های فرانت‌ند با اهداف تجاری و نقشه‌های راه فنی.
     skills: [هدایت فنی, Angular, AngularJS, Laravel, PHP, Java, Spring Boot, Gradle]
   - title: مدیر سیستم و توسعه‌دهنده وب
@@ -72,8 +72,8 @@ experience:
     description: >
       حاسب سیستم یک شرکت مشاوره مدیریت است.
     responsibilities:
-      - بازسازی کامل زیرساخت IT شرکت و مدیریت محیط‌های Windows Server و TFS برای بیش از ۳۰ ایستگاه کاری.
-      - توسعه پورتال‌های داخلی PHP/MySQL برای امور مالی و طراحی یک پلتفرم سلامت چندمنظوره.
+      - نوسازی کامل زیرساخت IT شرکت برای بیش از ۳۰ ایستگاه کاری، کاهش ۹۰ درصدی زمان قطعی شبکه و دو برابر کردن سرعت انتقال داده‌های داخلی.
+      - توسعه پورتال‌های داخلی PHP/MySQL، خودکارسازی فرآیند حقوق و دستمزد برای بیش از ۵۰ کارمند و کاهش ۳۰ درصدی هزینه‌های اداری.
     skills: [مدیریت سیستم, زیرساخت IT, PHP, MySQL, Windows Server, TFS, DNS, Networking]
 certifications:
   - title: مدرک زبان آلمانی (B1)
