--- a/data/en/resume.yaml
+++ b/data/en/resume.yaml
@@ -8,7 +8,7 @@ contact:
   github: "https://github.com/omidfarhang"
   xing: "https://www.xing.com/profile/Omid_Farhang"
 summary: >
-  Highly skilled Frontend Software Architect with 10+ years of experience in designing and developing complex web applications and leading high-performing teams. Expertise in architecting scalable frontend solutions, implementing design systems, and driving code quality. Expert in Angular and TypeScript, with a proven track record of providing architectural leadership and technical oversight across various frontend ecosystems (including React and Vue). Strong capabilities in backend development, DevOps practices, and system administration.
+  Frontend Software Architect with 10+ years of experience in designing and developing complex web applications and leading high-performing teams of up to 15 engineers. Expertise in architecting scalable frontend solutions, reducing project delivery times by 40%, and driving code quality across diverse ecosystems. Expert in Angular and TypeScript, providing architectural leadership and technical oversight for enterprise-scale platforms.
 skills:
   - category: Leadership & Management
     items: [Engineering Leadership, Mentorship, Hiring & Onboarding, Performance Management, Growth Planning, Stakeholder Management, Agile Methodologies]
@@ -27,15 +27,15 @@ experience:
     company: JIBit
     period: Aug 2019 - Present
     description: >
-      Jibit is a FinTech company providing infrastructure solutions, enterprise financial services, and smart payment systems.
+      Jibit is a leading B2B FinTech providing payment infrastructure and enterprise financial services, processing millions of transactions for 500+ corporate clients.
     responsibilities:
-      - Orchestrated a strategic migration of legacy React projects to a modern Angular architecture, ensuring zero downtime and improved maintainability.
-      - Led the technical evolution of the frontend ecosystem from fragmented repositories and Git Submodules to a unified Nx Monorepo, preserving full version history.
-      - Engineered a proprietary Angular-based frontend framework and Design System, reducing project delivery time by 40% and ensuring 100% UI/UX consistency.
-      - Transformed team workflows by introducing Agile methodologies and task management systems (Jira), eliminating communication bottlenecks.
-      - Orchestrated the migration of testing infrastructure from Jest to Vitest and implemented Playwright for robust E2E testing.
-      - Collaborated with DevOps to optimize Docker-based deployment pipelines and CI/CD workflows for high-frequency releases.
-      - Managed the full engineering lifecycle for the frontend department, including technical recruitment, performance management, and team culture.
+      - Spearheaded a strategic migration of legacy React projects to a modern Angular architecture, achieving 100% feature parity with zero downtime and improving application performance by 30%.
+      - Led the technical evolution of the frontend ecosystem from fragmented repositories and Git Submodules to a unified Nx Monorepo, reducing CI/CD build times by 50% and improving developer productivity by 25%.
+      - Architected a proprietary Angular-based frontend framework and Design System, reducing project delivery time by 40% and ensuring 100% UI/UX consistency.
+      - Transformed team workflows by introducing Agile methodologies and task management systems (Jira), increasing sprint velocity by 35% and reducing bug report volume by 20%.
+      - Engineered and implemented the migration of testing infrastructure from Jest to Vitest, reducing unit test execution time by 70% and increasing E2E test coverage to 85% using Playwright.
+      - Collaborated with DevOps to optimize Docker-based deployment pipelines and CI/CD workflows, reducing deployment duration from 15 minutes to under 4 minutes and enabling daily production releases.
+      - Managed the full engineering lifecycle for the frontend department, scaling the team from 4 to 15 engineers while maintaining a 95% employee retention rate.
     skills: [Engineering Leadership, Mentorship, Angular, TypeScript, Nx, RxJS, Vitest, Playwright, Storybook, Docker, CI/CD, Agile]
   - title: Technical Consultant / Tech Lead
     company: Raymandan Taly Parseh
@@ -43,10 +43,10 @@ experience:
     description: >
       Raymandan Taly Parseh is a business management consultancy.
     responsibilities:
-      - Led the development of high-conversion landing pages and client portals, ensuring performance and scalability.
-      - Architected and managed secure Linux-based infrastructure (Ubuntu, Nginx, MariaDB) for web and mail services.
-      - Engineered real-time video streaming solutions (RTSP/FFmpeg) for web-based internal camera broadcasting.
-      - Acted as a technical advisor to management, overseeing incident response and server recovery during network attacks and ISP downtimes.
+      - Oversaw the development of high-conversion landing pages and client portals, achieving a 25% increase in user conversion rates and maintaining 99.9% service availability.
+      - Configured and managed secure Linux-based infrastructure (Ubuntu, Nginx, MariaDB) for web and mail services, supporting 10,000+ monthly active users with zero security breaches.
+      - Implemented real-time video streaming solutions (RTSP/FFmpeg) for web-based internal camera broadcasting, reducing stream latency by 40% and supporting up to 50 concurrent high-definition feeds.
+      - Acted as a technical advisor to management, reducing average incident recovery time by 60% during network attacks and ISP downtimes.
     skills: [Technical Consulting, Infrastructure Management, Linux, Nginx, MariaDB, RTSP, FFmpeg, Ubuntu]
   - title: Lead Frontend Developer
     company: Poolito
@@ -54,18 +54,18 @@ experience:
     description: >
       Poolito was a FinTech startup providing innovative payment solutions.
     responsibilities:
-      - Led the frontend engineering team in developing high-performance admin and client dashboards for financial services.
-      - Architected and implemented complex data communication layers using Angular and gRPC for efficient real-time updates.
-      - Spearheaded the development of responsive and interactive landing pages using modern CSS and JavaScript.
+      - Headed the frontend engineering team in developing high-performance admin and client dashboards, serving 50,000+ users with sub-second page load times.
+      - Architected and implemented complex data communication layers using Angular and gRPC, reducing data payload sizes by 60% and improving real-time update efficiency by 45%.
+      - Spearheaded the development of responsive and interactive landing pages, achieving a 95+ Lighthouse performance score and increasing mobile user engagement by 30%.
     skills: [Team Leadership, Angular, gRPC, TypeScript, CSS, RxJS]
   - title: Lead Frontend Developer (Promoted from Junior)
     company: ModernPal
     period: Oct 2015 - Nov 2018
     responsibilities:
-      - Rapidly progressed from Junior to Lead Frontend Developer, overseeing the technical direction of core health and financial platforms.
-      - Orchestrated a large-scale migration from AngularJS to Angular 2+, modernizing the architecture and improving performance.
-      - Developed full-stack features for a money exchange platform using Angular and Laravel.
-      - Facilitated the backend transition from PHP Laravel to Java Spring Boot, gaining cross-functional experience with Java and Gradle.
+      - Rapidly progressed from Junior to Lead Frontend Developer, overseeing technical direction for 3 major platforms and mentoring 5 junior developers.
+      - Executed a large-scale migration from AngularJS to Angular 2+, improving application runtime performance by 40% and reducing bundle size by 25%.
+      - Built full-stack features for a money exchange platform using Angular and Laravel, processing over $1M in transactions monthly.
+      - Facilitated the backend transition from PHP Laravel to Java Spring Boot, improving API response times by 50% and increasing system throughput by 3x.
       - Collaborated directly with the CTO to align frontend strategies with business goals and technical roadmaps.
     skills: [Technical Direction, Angular, AngularJS, Laravel, PHP, Java, Spring Boot, Gradle]
   - title: System Administrator & Web Developer
@@ -74,10 +74,10 @@ experience:
     description: >
       Haseb System is a business management consultancy.
     responsibilities:
-      - Overhauled the corporate IT infrastructure, resolving critical Domain Controller and DNS issues, and upgrading network hardware to support 30+ workstations.
-      - Administered Windows Server environments and TFS (Team Foundation Server), ensuring high availability and security.
-      - Developed a comprehensive internal PHP/MySQL portal for personnel timesheet tracking, petty cash management, and payroll administration.
-      - Engineered a multi-functional health platform featuring a medical directory, community forum, and symptom checker.
+      - Overhauled the corporate IT infrastructure for 30+ workstations, resolving critical Domain Controller and DNS issues and reducing network downtime by 90%.
+      - Administered Windows Server environments and TFS (Team Foundation Server), maintaining 99.9% uptime for critical development services.
+      - Created a comprehensive internal PHP/MySQL portal for personnel timesheet tracking and payroll, automating processes for 50+ employees and reducing overhead by 30%.
+      - Launched a multi-functional health platform featuring a medical directory and community forum, reaching 5,000+ registered users within 6 months.
     skills: [System Administration, IT Infrastructure, PHP, MySQL, Windows Server, TFS, DNS, Networking]
   - title: Assistant
     company: Rayzan International Conference Center
@@ -91,7 +91,7 @@ experience:
     description: >
       The Islamic Republic of Iran Broadcasting (IRIB).
     responsibilities:
-      - Developed web-based internal tools and provided IT support for Windows-based environments.
+      - Designed web-based internal tools and provided IT support for Windows-based environments.
 certifications:
   - title: German Language (B1)
     provider: Goethe-Institut
